--- a/packages/alarm/skill_device/control_code/tastierino estero/keypad.yaml
+++ b/packages/alarm/skill_device/control_code/tastierino estero/keypad.yaml
@@ -1,25 +1,19 @@
-homeassistant:
-  customize:
-    package.node_anchors:
-      Allarme: &alarm alarm_control_panel.home_alarm
-
-##############################################################
-#         DA QUESTO PUNTO NON MODIFICARE
-##############################################################
 input_boolean:
   allarme_scattato:
 
 template:
 
   - trigger:
-      - platform: state
-        entity_id: *alarm
-        not_to:
-          - "triggered"
-          - "pending"
-          - "arming"
-      - platform: state
-        entity_id: button.confirmed_code_alarm_keypad
+    - platform: template
+      value_template: >
+        {% from 'alarm.jinja' import state_alarm %}
+        {%set alarm = (state_alarm()|from_json)['alarm'] %}
+        {{( is_state(alarm,'arming') or
+        is_state(alarm,'triggered') or
+        is_state(alarm,'pending'))
+        and now() < states[alarm].last_changed+ timedelta(seconds=1)}}
+    - platform: state
+      entity_id: button.confirmed_code_alarm_keypad
     sensor:
       - name: counter_code_error_keypad
         state: >
@@ -43,7 +37,9 @@ template:
               code: >
                 {% from 'alarm.jinja' import state_alarm %}
                 {{ (state_alarm()|from_json)['code']}}
-              alarm: *alarm
+              alarm: >
+                {% from 'alarm.jinja' import state_alarm %}
+                {{ (state_alarm()|from_json)['alarm']}}
           - choose:
 
               - alias: Disattiva allarme
@@ -58,7 +54,7 @@ template:
                 sequence:
                   - service: alarm_control_panel.alarm_disarm
                     target:
-                      entity_id: *alarm
+                      entity_id: "{{ alarm }}"
                     data:
                       code: "{{ code }}"
 
@@ -69,7 +65,7 @@ template:
                 sequence:
                   - service: alarm_control_panel.alarm_arm_away
                     target:
-                      entity_id: *alarm
+                      entity_id: "{{ alarm }}"
                     data:
                       code: "{{ code }}"
 
@@ -84,34 +80,24 @@ template:
                   - alias: Disattiva allarme
                     service: alarm_control_panel.alarm_disarm
                     target:
-                      entity_id: *alarm
+                      entity_id: "{{ alarm }}"
                     data:
                       code: "{{ code }}"
                   - variables:
                       message: >
                         {{ "Attenzione è stato disattivato l'allarme con codice di emergenza alle " + (now().strftime("%H:%M"))|string}}
-                      for_each: >
-                        {% from 'alarm.jinja' import person_alarm %}
-                        {% set output = namespace(state_home=[]) %}
-                          {%for dict in person_alarm()|from_json if states[dict.person].state != 'home' and dict.cellulare != 'none' %}
-                            {# lista persone non in casa con numero cellulare associato #}
-                            {%- set output.state_home = output.state_home + [dict['cellulare'] ] -%}
-                          {% endfor %}
-                          {{output.state_home}}
                   - alias: Invia chiamata voip alle persone che NON si trovano in casa
                     event: customizations
                     event_data:
                       types: notify_alarm
                       notify: disattivato_con_codice_emergenza_solovoip
                       message: "{{message}}"
-                      for_each: "{{for_each}}"
-                  - variables:
                       for_each: >
                         {% from 'alarm.jinja' import person_alarm %}
                         {% set output = namespace(state_home=[]) %}
-                          {%for dict in person_alarm()|from_json if states[dict.person].state != 'home'%}
-                            {# lista persone non in casa #}
-                            {%- set output.state_home = output.state_home + ['notify.'+dict['notify'] ] -%}
+                          {%for dict in person_alarm()|from_json if states[dict.person].state != 'home' and dict.cellulare != 'none' %}
+                            {# lista persone non in casa con numero cellulare associato #}
+                            {%- set output.state_home = output.state_home + [dict['cellulare'] ] -%}
                           {% endfor %}
                           {{output.state_home}}
                   - alias: Invia notifica PUSH alle persone che NON si trovano in casa
@@ -122,7 +108,14 @@ template:
                       critical: 1.0
                       tag: control_code
                       message:  "{{message}}"
-                      for_each: "{{for_each}}"
+                      for_each: >
+                        {% from 'alarm.jinja' import person_alarm %}
+                        {% set output = namespace(state_home=[]) %}
+                          {%for dict in person_alarm()|from_json if states[dict.person].state != 'home'%}
+                            {# lista persone non in casa #}
+                            {%- set output.state_home = output.state_home + ['notify.'+dict['notify'] ] -%}
+                          {% endfor %}
+                          {{output.state_home}}
                       action2: None
                       
               - alias: Controlla tentativi codice errato
@@ -144,11 +137,13 @@ automation:
     initial_state: true
     mode: single
     trigger:
-      - platform: state
-        entity_id: *alarm
-        state: triggered
-      - platform: state
-        entity_id: sensor.keypad_code
+    - platform: template
+      value_template: >
+        {% from 'alarm.jinja' import state_alarm %}
+        {%set alarm = (state_alarm()|from_json)['alarm'] %}
+        {{ is_state(alarm,'triggered') and now() < states[alarm].last_changed+ timedelta(seconds=1)}}
+    - platform: state
+      entity_id: sensor.keypad_code
     action:
       - if: "{{trigger.entity_id == 'sensor.keypad_code'}}"
         then:
