--- a/packages/alarm/skill_device/control_code/whit_card.yaml
+++ b/packages/alarm/skill_device/control_code/whit_card.yaml
@@ -1,12 +1,7 @@
-homeassistant:
-  customize:
-    package.node_anchors:
-      Allarme: &alarm alarm_control_panel.home_alarm
+#################################################
+# ATTENZIONE: file funzionante solo con la card #
+#################################################
 
-# ATTENZIONE: file funzionante solo con la card
-##############################################################
-#         DA QUESTO PUNTO NON MODIFICARE
-##############################################################
 input_number:
   control_code_alarm:
     name: Codice allarme
@@ -24,14 +19,16 @@ template:
         {{ (state_alarm()|from_json)['setting_code'] }}
 
   - trigger:
-      - platform: state
-        entity_id: *alarm
-        not_to:
-          - "triggered"
-          - "pending"
-          - "arming"
-      - platform: state
-        entity_id: button.confirmed_code_alarm
+    - platform: template
+      value_template: >
+        {% from 'alarm.jinja' import state_alarm %}
+        {%set alarm = (state_alarm()|from_json)['alarm'] %}
+        {{( is_state(alarm,'arming') or
+        is_state(alarm,'triggered') or
+        is_state(alarm,'pending'))
+        and now() < states[alarm].last_changed+ timedelta(seconds=1)}}
+    - platform: state
+      entity_id: button.confirmed_code_alarm
     sensor:
       - name: counter_code_error
         state: >
@@ -85,28 +82,18 @@ template:
                   - variables:
                       message: >
                         {{ "Attenzione è stato disattivato l'allarme con codice di emergenza alle " + (now().strftime("%H:%M"))|string}}
-                      for_each: >
-                        {% from 'alarm.jinja' import person_alarm %}
-                        {% set output = namespace(state_home=[]) %}
-                          {%for dict in person_alarm()|from_json if states[dict.person].state != 'home' and dict.cellulare != 'none' %}
-                            {# lista persone non in casa con numero cellulare associato #}
-                            {%- set output.state_home = output.state_home + [dict['cellulare'] ] -%}
-                          {% endfor %}
-                          {{output.state_home}}
                   - alias: Invia chiamata voip alle persone che NON si trovano in casa
                     event: customizations
                     event_data:
                       types: notify_alarm
                       notify: disattivato_con_codice_emergenza_solovoip
                       message:  "{{message}}"
-                      for_each: "{{for_each}}"
-                  - variables:
                       for_each: >
                         {% from 'alarm.jinja' import person_alarm %}
                         {% set output = namespace(state_home=[]) %}
-                          {%for dict in person_alarm()|from_json if states[dict.person].state != 'home'%}
-                            {# lista persone non in casa #}
-                            {%- set output.state_home = output.state_home + ['notify.'+dict['notify'] ] -%}
+                          {%for dict in person_alarm()|from_json if states[dict.person].state != 'home' and dict.cellulare != 'none' %}
+                            {# lista persone non in casa con numero cellulare associato #}
+                            {%- set output.state_home = output.state_home + [dict['cellulare'] ] -%}
                           {% endfor %}
                           {{output.state_home}}
                   - alias: Invia notifica PUSH alle persone che NON si trovano in casa
@@ -117,7 +104,14 @@ template:
                       critical: 1.0
                       tag: control_code
                       message:  "{{message}}"
-                      for_each: "{{for_each}}"
+                      for_each: >
+                        {% from 'alarm.jinja' import person_alarm %}
+                        {% set output = namespace(state_home=[]) %}
+                          {%for dict in person_alarm()|from_json if states[dict.person].state != 'home'%}
+                            {# lista persone non in casa #}
+                            {%- set output.state_home = output.state_home + ['notify.'+dict['notify'] ] -%}
+                          {% endfor %}
+                          {{output.state_home}}
                       action2: None
 
               - alias: Controlla tentativi codice errato 
