--- a/packages/alarm/skill_device/control_code/tastierino estero/keypad.yaml
+++ b/packages/alarm/skill_device/control_code/tastierino estero/keypad.yaml
@@ -8,10 +8,17 @@ template:
       value_template: >
         {% from 'alarm.jinja' import state_alarm %}
         {%set alarm = (state_alarm()|from_json)['alarm'] %}
-        {{( is_state(alarm,'arming') or
-        is_state(alarm,'triggered') or
-        is_state(alarm,'pending'))
-        and now() < states[alarm].last_changed+ timedelta(seconds=1)}}
+        {{ is_state(alarm,'arming')  and now() < states[alarm].last_changed+ timedelta(seconds=1)}}
+    - platform: template
+      value_template: >
+        {% from 'alarm.jinja' import state_alarm %}
+        {%set alarm = (state_alarm()|from_json)['alarm'] %}
+        {{ is_state(alarm,'triggered')  and now() < states[alarm].last_changed+ timedelta(seconds=1)}}
+    - platform: template
+      value_template: >
+        {% from 'alarm.jinja' import state_alarm %}
+        {%set alarm = (state_alarm()|from_json)['alarm'] %}
+        {{ is_state(alarm,'pending')  and now() < states[alarm].last_changed+ timedelta(seconds=1)}}
     - platform: state
       entity_id: button.confirmed_code_alarm_keypad
     sensor:
