--- a/packages/alarm/alarm_control_panel/armed_away.yaml
+++ b/packages/alarm/alarm_control_panel/armed_away.yaml
@@ -80,11 +80,22 @@ automation:
       value_template: >
         {% from 'alarm.jinja' import state_alarm %}
         {%set alarm = (state_alarm()|from_json)['alarm'] %}
-        {{(is_state(alarm,'armed_away') or
-        is_state(alarm,'arming') or
-        is_state(alarm,'triggered') or
-        is_state(alarm,'disarmed'))
-        and now() < states[alarm].last_changed+ timedelta(seconds=1)}}
+        {{ is_state(alarm,'arming')  and now() < states[alarm].last_changed+ timedelta(seconds=1)}}
+    - platform: template
+      value_template: >
+        {% from 'alarm.jinja' import state_alarm %}
+        {%set alarm = (state_alarm()|from_json)['alarm'] %}
+        {{ is_state(alarm,'triggered')  and now() < states[alarm].last_changed+ timedelta(seconds=1)}}
+    - platform: template
+      value_template: >
+        {% from 'alarm.jinja' import state_alarm %}
+        {%set alarm = (state_alarm()|from_json)['alarm'] %}
+        {{ is_state(alarm,'disarmed')  and now() < states[alarm].last_changed+ timedelta(seconds=1)}}
+    - platform: template
+      value_template: >
+        {% from 'alarm.jinja' import state_alarm %}
+        {%set alarm = (state_alarm()|from_json)['alarm'] %}
+        {{ is_state(alarm,'armed_away') and now() < states[alarm].last_changed+ timedelta(seconds=1)}}
   action:
   - choose: 
     - alias: Inserimento allarme
