--- a/packages/alarm/scene/action_alarm.yaml
+++ b/packages/alarm/scene/action_alarm.yaml
@@ -35,9 +35,12 @@ automation:
     value_template: >
       {% from 'alarm.jinja' import state_alarm %}
       {%set alarm = (state_alarm()|from_json)['alarm'] %}
-      {{(is_state(alarm,'pending') or
-      is_state(alarm,'disarmed'))
-      and now() < states[alarm].last_changed+ timedelta(seconds=1)}}
+      {{ is_state(alarm,'disarmed')  and now() < states[alarm].last_changed+ timedelta(seconds=1)}}
+  - platform: template
+    value_template: >
+      {% from 'alarm.jinja' import state_alarm %}
+      {%set alarm = (state_alarm()|from_json)['alarm'] %}
+      {{ is_state(alarm,'pending') and now() < states[alarm].last_changed+ timedelta(seconds=1)}}
   - platform: state
     entity_id: input_boolean.alarm_triggered_state
     from: 
