--- a/packages/alarm/skill_device/siren.yaml
+++ b/packages/alarm/skill_device/siren.yaml
@@ -17,11 +17,21 @@ automation:
       {% from 'alarm.jinja' import state_alarm %}
       {{ (state_alarm()|from_json)['alarm']}}
   trigger:
-  - platform: template
-    value_template: >
-      {% from 'alarm.jinja' import state_alarm %}
-      {%set alarm = (state_alarm()|from_json)['alarm'] %}
-      {{( is_state(alarm,'pending') or is_state(alarm,'triggered') or is_state(alarm,'disarmed')) and now() < states[alarm].last_changed+ timedelta(seconds=1)}}
+    - platform: template
+      value_template: >
+        {% from 'alarm.jinja' import state_alarm %}
+        {%set alarm = (state_alarm()|from_json)['alarm'] %}
+        {{ is_state(alarm,'pending')  and now() < states[alarm].last_changed+ timedelta(seconds=1)}}
+    - platform: template
+      value_template: >
+        {% from 'alarm.jinja' import state_alarm %}
+        {%set alarm = (state_alarm()|from_json)['alarm'] %}
+        {{ is_state(alarm,'triggered')  and now() < states[alarm].last_changed+ timedelta(seconds=1)}}
+    - platform: template
+      value_template: >
+        {% from 'alarm.jinja' import state_alarm %}
+        {%set alarm = (state_alarm()|from_json)['alarm'] %}
+        {{ is_state(alarm,'disarmed')  and now() < states[alarm].last_changed+ timedelta(seconds=1)}}
   action:
   - choose:
       - alias: Primo avviso sensore scattato
