--- a/packages/alarm/skill_device/led_state_alarm.yaml
+++ b/packages/alarm/skill_device/led_state_alarm.yaml
@@ -11,17 +11,27 @@ automation:
   id: led_state_alarm
   mode: single
   trigger:
-  - platform: template
-    value_template: >
-      {% from 'alarm.jinja' import state_alarm %}
-      {%set alarm = (state_alarm()|from_json)['alarm'] %}
-      {{( is_state(alarm,'arming') or is_state(alarm,'triggered') or is_state(alarm,'disarmed')) and now() < states[alarm].last_changed+ timedelta(seconds=1)}}
+    - platform: template
+      value_template: >
+        {% from 'alarm.jinja' import state_alarm %}
+        {% set alarm = (state_alarm()|from_json)['alarm'] %}
+        {{ is_state(alarm,'arming') and now() < states[alarm].last_changed+ timedelta(seconds=1) }}
+    - platform: template
+      value_template: >
+        {% from 'alarm.jinja' import state_alarm %}
+        {% set alarm = (state_alarm()|from_json)['alarm'] %}
+        {{ is_state(alarm,'triggered') and now() < states[alarm].last_changed+ timedelta(seconds=1) }}
+    - platform: template
+      value_template: >
+        {% from 'alarm.jinja' import state_alarm %}
+        {% set alarm = (state_alarm()|from_json)['alarm'] %}
+        {{ is_state(alarm,'disarmed') and now() < states[alarm].last_changed+ timedelta(seconds=1) }}
   action:
     - choose:
 
       - alias: Accendi led se allarme inserito
         conditions:
-        - "{{trigger.to_state.state == 'arming'}}"
+        - "{{ trigger.to_state.state == 'arming' }}"
         sequence:
         - service: switch.turn_on
           target:
@@ -29,7 +39,7 @@ automation:
 
       - alias: Spegni led per allarme disattivato
         conditions:
-        - "{{trigger.to_state.state == 'disarmed'}}"
+        - "{{ trigger.to_state.state == 'disarmed' }}"
         sequence:
         - service: switch.turn_off
           target:
@@ -37,17 +47,17 @@ automation:
 
       - alias: Fai lampeggiare led per allarme scattato fino a quando lo stato non passa a disarmato per 10 minuti
         conditions:
-        - "{{trigger.to_state.state == 'triggered'}}"
+        - "{{ trigger.to_state.state == 'triggered' }}"
         sequence:
         - repeat:
             until:
             - or:
               - condition: template
                 value_template: > 
-                  {% from 'alarm.jinja' import state_alarm %}
-                  {{ states[alarm].state == 'disarmed' }}
-                for: '00:10:00'
-              - "{{ trigger.to_state.state == 'disarmed' and trigger.from_state.state == 'triggered'}}"
+                  {% from 'alarm.jinja' import state_alarm %}                  
+                  {% set alarm = (state_alarm()|from_json)['alarm'] %}
+                  {{ states[alarm].state == 'disarmed' and now() > states[alarm].last_changed+ timedelta(minutes=10) }}
+              - "{{ trigger.to_state.state == 'disarmed' and trigger.from_state.state == 'triggered' }}"
             sequence:
             - service: switch.turn_on
               target:
